--- a/src/layouts/Blogs.astro
+++ b/src/layouts/Blogs.astro
@@ -24,14 +24,14 @@ const {
 ---
 
 <Layout title={title} description={description} image={image.url_landscape} siteTitle={siteTitle}>
-  <main class='mx-auto max-w-screen-lg'>
+  <main class='mx-auto max-w-screen-lg bg-gray-900 shadow-2xl shadow-slate-700'>
     <Image
       src={image.url_landscape}
       alt={image.alt}
       format='jpg'
       width={1200}
       height={630}
-      class='h-96'
+      class='h-96 shadow-bottom shadow-slate-950'
     />
 
     <h1 class='text-center lg:mt-12 lg:px-16'>{title}</h1>
