--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -2,7 +2,7 @@
 import type {MarkdownLayoutProps} from 'astro'
 import {Image} from '@astrojs/image/components'
 
-import Layout from '../layouts/Layout.astro'
+import Layout from './MainLayout.astro'
 
 import 'styles/blog.css'
 
