--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from 'layouts/Layout.astro'
+import Layout from 'layouts/MainLayout.astro'
 import EarthSvg from 'assets/earth.astro'
 import RocketAstronaut from 'assets/rocket-astronaut.astro'
 import PlanetLandscape from 'assets/landscape.astro'
