fix: counts prop type

--- a/src/components/StarsBg.astro
+++ b/src/components/StarsBg.astro
@@ -2,7 +2,7 @@
 const {counts = 120} = Astro.props
 
 export interface Props {
-  counts?: [number, number, number][]
+  counts?: number
 }
 
 const stars = Array(counts)
