--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,25 +1,24 @@
 ---
-import {getCollection} from 'astro:content'
-import {Image} from '@astrojs/image/components'
-import BlogLayout from 'layouts/BlogLayout.astro'
+import { getCollection } from "astro:content";
+import { Image } from "@astrojs/image/components";
+import BlogLayout from "layouts/BlogLayout.astro";
 
-import type {InferGetStaticParamsType, InferGetStaticPropsType} from 'astro'
+import type { InferGetStaticPropsType } from "astro";
 
-import 'styles/blog.css'
+import "styles/blog.css";
 
-type Params = InferGetStaticParamsType<typeof getStaticPaths>
-type Props = InferGetStaticPropsType<typeof getStaticPaths>
+type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 export async function getStaticPaths() {
-  const blogEntries = await getCollection('blog')
+  const blogEntries = await getCollection("blog");
   return blogEntries.map((entry) => ({
-    params: {slug: entry.slug},
-    props: {entry},
-  }))
+    params: { slug: entry.slug },
+    props: { entry },
+  }));
 }
 
-const {entry} = Astro.props
-const {Content} = await entry.render()
+const { entry } = Astro.props;
+const { Content } = await entry.render();
 ---
 
 <BlogLayout
@@ -31,14 +30,14 @@ const {Content} = await entry.render()
   <Image
     src={entry.data.image.url_landscape}
     alt={entry.data.image.alt}
-    format='jpg'
+    format="jpg"
     width={1200}
     height={630}
-    class='h-96 shadow-bottom shadow-slate-950'
+    class="h-96 shadow-bottom shadow-slate-950"
   />
 
-  <h1 class='text-center lg:mt-12 lg:px-16'>{entry.data.title}</h1>
-  <div class='mx-auto max-w-screen-md'>
+  <h1 class="text-center lg:mt-12 lg:px-16">{entry.data.title}</h1>
+  <div class="mx-auto max-w-screen-md">
     <Content />
   </div>
 </BlogLayout>
