--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,22 +1,29 @@
 ---
-import Layout from './MainLayout.astro'
+import Layout from "./MainLayout.astro";
 
-import StarsBg from 'components/StarsBg.astro'
+import StarsBg from "components/StarsBg.astro";
 
 export type Props = {
-  title: string
-  siteTitle: string
-  description: string
-  image: string
-}
+  title: string;
+  siteTitle: string;
+  description: string;
+  image: string;
+};
 
-const {title, image, description, siteTitle} = Astro.props
+const { title, image, description, siteTitle } = Astro.props;
 ---
 
-<Layout title={title} description={description} image={image} siteTitle={siteTitle}>
-  <div class='relative overflow-clip'>
+<Layout
+  title={title}
+  description={description}
+  image={image}
+  siteTitle={siteTitle}
+>
+  <div class="relative overflow-clip">
     <StarsBg />
-    <main class='mx-auto max-w-screen-lg bg-gray-900 shadow-2xl shadow-slate-700'>
+    <main
+      class="mx-auto max-w-screen-lg bg-gray-900 shadow-2xl shadow-slate-700"
+    >
       <slot />
     </main>
   </div>
