--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -22,7 +22,7 @@ const { title, image, description, siteTitle } = Astro.props;
   <div class="relative overflow-clip">
     <StarsBg />
     <main
-      class="mx-auto max-w-screen-lg bg-gray-900 shadow-2xl shadow-slate-700"
+      class="mx-auto max-w-screen-lg bg-gray-900 pb-8 shadow-2xl shadow-slate-700"
     >
       <slot />
     </main>
