--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -189,7 +189,7 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
                     </h2>
                     <div class="absolute -left-0 top-2 h-full w-0 border-[12px] border-transparent border-l-accent-300 transition-transform" />
                   </div>
-                  <p class="mb-4 mt-4 line-clamp-4 pl-6 pr-4 leading-5 md:line-clamp-2 md:leading-normal lg:line-clamp-3">
+                  <p class="mb-4 mt-4 line-clamp-4 px-6 leading-5 md:line-clamp-2 md:leading-normal lg:line-clamp-3">
                     {article.data.description}
                   </p>
                 </div>
