--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -27,17 +27,19 @@ const { Content } = await entry.render();
   siteTitle={entry.data.siteTitle}
   image={entry.data.image.url_landscape}
 >
-  <Image
-    src={entry.data.image.url_landscape}
-    alt={entry.data.image.alt}
-    format="jpg"
-    width={1200}
-    height={630}
-    class="h-96 shadow-bottom shadow-slate-950"
-  />
+  <article>
+    <Image
+      src={entry.data.image.url_landscape}
+      alt={entry.data.image.alt}
+      format="jpg"
+      width={1200}
+      height={630}
+      class="h-96 shadow-bottom shadow-slate-950"
+    />
 
-  <h1 class="text-center lg:mt-12 lg:px-16">{entry.data.title}</h1>
-  <div class="mx-auto max-w-screen-md">
-    <Content />
-  </div>
+    <h1 class="text-center lg:mt-12 lg:px-16">{entry.data.title}</h1>
+    <div class="mx-auto max-w-screen-md">
+      <Content />
+    </div>
+  </article>
 </BlogLayout>
