--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,7 +85,7 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
                 <span
                   style="--n:22"
                   class={`typing_dialog text-black before:text-3xl group-hover:invisible before:visible before:text-black before:group-hover:content-["Ready??"] before:group-focus:content-["Let's_GO!_"]`}
-                  >Right here, hope on!!</span
+                  >Right here, hop on!!</span
                 >
               </p>
             </div>
