--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -19,12 +19,12 @@ const { title, image, description, siteTitle } = Astro.props;
   image={image}
   siteTitle={siteTitle}
 >
-  <div class="relative overflow-clip">
+  <main class="relative overflow-clip">
     <StarsBg />
-    <main
-      class="mx-auto max-w-screen-lg bg-gray-900 pb-8 shadow-xl shadow-slate-700"
+    <article
+      class="prose prose-sm mx-auto max-w-screen-lg overflow-auto bg-gray-900 pb-8 shadow-xl shadow-slate-700 md:prose-base lg:prose-lg prose-headings:font-head prose-headings:text-blue-50 prose-h1:leading-snug prose-h1:tracking-wide prose-p:indent-6 prose-p:text-base prose-p:text-blue-100 prose-a:text-blue-300 prose-em:text-white md:prose-p:text-lg lg:prose-p:text-xl lg:prose-p:leading-normal prose-img:mt-0"
     >
       <slot />
-    </main>
-  </div>
+    </article>
+  </main>
 </Layout>
