--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,11 +1,9 @@
 ---
 import { getCollection } from "astro:content";
-import { Image } from "@astrojs/image/components";
+import { Picture } from "@astrojs/image/components";
 import BlogLayout from "layouts/BlogLayout.astro";
 
 import type { InferGetStaticPropsType } from "astro";
-
-import "styles/blog.css";
 
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
@@ -36,9 +34,8 @@ const { Content } = await entry.render();
     class="shadow-bottom shadow-slate-950"
   />
 
-    <h1 class="text-center lg:mt-12 lg:px-16">{entry.data.title}</h1>
-    <div class="mx-auto max-w-screen-md">
-      <Content />
-    </div>
-  </article>
+  <h1 class="px-4 text-center md:px-8 lg:px-16">{entry.data.title}</h1>
+  <div class="mx-auto max-w-screen-md px-6 md:px-16 lg:px-0">
+    <Content />
+  </div>
 </BlogLayout>
