--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -31,7 +31,7 @@ const { Content } = await entry.render();
     aspectRatio="5:2"
     sizes="(min-width: 768px) 100vw, (min-width: 1024px) 100vw"
     alt={entry.data.image.alt}
-    class="shadow-bottom shadow-slate-950"
+    class="mb-[45vw] origin-top scale-[2] shadow-bottom shadow-slate-950 sm:mb-8 sm:scale-100"
   />
 
   <h1 class="px-4 text-center md:px-8 lg:px-16">{entry.data.title}</h1>
