--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -157,8 +157,10 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
       <div
         class="mx-auto flex max-w-screen-md flex-col items-center px-4 md:px-8 lg:px-0"
       >
-        <object class="my-8" data="/images/blog-stars.svg" type="image/svg+xml"
-        ></object>
+        <img
+          src="/images/blog-stars.svg"
+          class="-z-10 my-8 h-40 w-auto lg:h-auto"
+        />
 
         <div class="relative space-y-6 px-6">
           {
