--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,12 +171,12 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
               >
                 <article>
                   <div class="relative h-fit w-full overflow-x-clip">
-                    <h3 class="line-clamp-2 pl-6 pr-4 pt-3 text-2xl tracking-wide md:text-3xl">
+                    <h3 class="line-clamp-3 pl-6 pr-3 pt-2 text-xl leading-[22px] tracking-wide md:line-clamp-2 md:pr-4 md:pt-3 md:text-3xl md:leading-10">
                       {article.data.title}
                     </h3>
                     <div class="absolute -left-0 top-2 h-full w-0 border-[12px] border-transparent border-l-accent-300 transition-transform" />
                   </div>
-                  <p class="mb-4 mt-4 line-clamp-4 px-6 leading-5 md:line-clamp-2 md:leading-normal lg:line-clamp-3">
+                  <p class="mb-2 mt-3 line-clamp-3 px-3 text-xs leading-4 md:mb-4 md:mt-4 md:line-clamp-3 md:px-6 md:text-base md:leading-snug">
                     {article.data.description}
                   </p>
                 </article>
@@ -198,7 +198,7 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
           }
         </div>
         <a
-          class="relative mt-8 px-6 font-head text-xl text-white transition-all after:absolute after:left-1/2 after:top-1/2 after:-z-10 after:h-0 after:w-full after:-translate-x-1/2 after:-translate-y-1/2 after:border-8 after:border-transparent after:border-x-accent-300 after:transition-transform after:duration-300 hover:cursor-pointer hover:tracking-widest hover:after:w-1/4 hover:after:-translate-y-[42.5%] hover:after:-rotate-90 active:after:scale-75 active:after:duration-100"
+          class="relative mt-8 hidden px-6 font-head text-xl text-white transition-all after:absolute after:left-1/2 after:top-1/2 after:-z-10 after:h-0 after:w-full after:-translate-x-1/2 after:-translate-y-1/2 after:border-8 after:border-transparent after:border-x-accent-300 after:transition-transform after:duration-300 hover:cursor-pointer hover:tracking-widest hover:after:w-1/4 hover:after:-translate-y-[42.5%] hover:after:-rotate-90 active:after:scale-75 active:after:duration-100"
           >More articles</a
         >
       </div>
